k3s-lab/sample-apps/registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-path
  namespace: container-registry
spec:
  ingressClassName: traefik
  rules:
    - host: rancher-mes.firstsolar.com
      http:
        paths:
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: registry
                port:
                  number: 5000
